# VMTOOL

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  architecture.mmd  architecture_analysis.mmd  architecture_detailed.mmd  build.py  code_analysis_report.md  config.json  config.py  coverage.xml  cs.py  description.md  dict_manager.py  file_ops.py  init_db.py  main.py  menu.py  output.txt  output.txt.20260328_211359.bak  output.txt.20260409_173357.bak  output.txt.20260409_173411.bak  plan.md  requirements.txt  test_actual_flow.py  test_code_generator.py  test_export.txt  test_import.txt  test_import_comma.txt  test_python_rule.py  timer.py  vm_tool.db  vmtool-gui.spec  vmtool.spec  weight_calculator.py  work_summary.md
vm-tool/: .gitignore  GUI_DEBUG_LOG.md  coverage.xml  diagnose_gui.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_gui_verbose.py  test_import.txt  test_pyqt6_simple.py  vmtool-gui.spec  vmtool.py  vmtool.spec
vm-tool/app/core/: cache.py  compatibility.py  config.py  config_manager.py  errors.py  logging_config.py  run_mode.py  service_registry.py  theme_config.py  theme_constants.py
vm-tool/app/dal/: __init__.py  database.py  init_db.py  migration.py  models.py  repositories.py
vm-tool/app/plugins/: __init__.py  base.py  manager.py
vm-tool/app/services/: code_generator.py  dict.py  filter.py  stats.py  thuocl.py  weight.py
vm-tool/docs/code-review/: checklist.md  review-specification.md
vm-tool/docs/superpowers/plans/: 2026-04-12-fix-theme-immediate-application.md
vm-tool/plugins/: example_plugin.py
vm-tool/scripts/: build.py
vm-tool/tests/: test_dict_service.py  test_example.py  test_filter_service.py  test_stats_service.py  test_weight_service.py
vm-tool/tests/unit/: test_code_generator.py  test_dict_service.py
vm-tool/ui/cli/: __main__.py
vm-tool/ui/gui/: code_rules_tab.py  progress_bar.py  pyqt_app.py  settings_tab.py  sidebar_tab_bar.py  theme_colors.py  theme_manager.py  theme_sync.py  theme_utils.py  threads.py  tkinter_app.py
vm-tool/ui/gui/settings/: __init__.py  appearance_panel.py  base_panel.py  cache_panel.py  cache_settings.py  code_rules_panel.py  code_rules_settings.py  config_db_settings.py  danger_zone_panel.py  data_panel.py  delete_table_settings.py  export_panel.py  file_config_settings.py  language_settings.py  stats_panel.py  (+3 more)
vm-tool/ui/web/: main.py
vm-tool/vm_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+48 files in other folders)
