[project]
name = "vm-tool"
version = "2.0.0"
description = "码表处理工具 - 现代化重构版本"
authors = [
    { name = "Claude Code", email = "claude@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.49"
alembic = "^1.13.0"
typer = "^0.9.0"
rich = "^13.7.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
jinja2 = "^3.1.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "W"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
